@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-11-26
+ * Fix trends delta roll up calculation.
+
 2018-11-25
  * Added Wing::Instrument to make it easier to profile Wing.
 
